@@ -1,0 +1,46 @@
+/*
+ * Copyright 2020 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.springframework.kafka.core;
+
+import org.springframework.util.concurrent.FailureCallback;
+
+/**
+ * An enhanced {@link FailureCallback} for reporting
+ * {@link KafkaProducerException}s.
+ *
+ * @param <K> the key type.
+ * @param <V> the value type.
+ *
+ * @author Gary Russell
+ * @since 2.5
+ *
+ */
+@FunctionalInterface
+public interface KafkaFailureCallback<K, V> extends FailureCallback {
+
+	@Override
+	default void onFailure(Throwable ex) {
+		onFailure((KafkaProducerException) ex);
+	}
+
+	/**
+	 * Called when the send fails.
+	 * @param ex the exception.
+	 */
+	void onFailure(KafkaProducerException ex);
+
+}
